# DOSBox Core sources

DOSBoxSrc =  [
	'core/src/dos/dos_devices.cpp',
	'core/src/dos/drive_physfs.cpp',
	'core/src/dos/dos_ioctl.cpp',
	'core/src/dos/eltorito.cpp',
	'core/src/dos/drive_cache.cpp',
	'core/src/dos/dos_execute.cpp',
	'core/src/dos/dos_files.cpp',
	'core/src/dos/cdrom_image.cpp',
	'core/src/dos/cdrom_ioctl_linux.cpp',
	'core/src/dos/drive_local.cpp',
	'core/src/dos/drive_fat.cpp',
	'core/src/dos/dos_mscdex.cpp',
	'core/src/dos/cdrom.cpp',
	'core/src/dos/dos_keyboard_layout.cpp',
	'core/src/dos/drives.cpp',
	'core/src/dos/dos_memory.cpp',
	'core/src/dos/cdrom_aspi_win32.cpp',
	'core/src/dos/cdrom_ioctl_os2.cpp',
	'core/src/dos/dos_classes.cpp',
	'core/src/dos/drive_virtual.cpp',
	'core/src/dos/dos.cpp',
	'core/src/dos/cdrom_ioctl_win32.cpp',
	'core/src/dos/dos_misc.cpp',
	'core/src/dos/dos_programs.cpp',
	'core/src/dos/dos_tables.cpp',
	'core/src/dos/drive_overlay.cpp',
	'core/src/dos/drive_iso.cpp',
	'core/src/debug/debug.cpp',
	'core/src/debug/debug_gui.cpp',
	'core/src/debug/debug_disasm.cpp',
	'core/src/debug/debug_win32.cpp',
	'core/src/dosbox.cpp',
	'core/src/cpu/core_full.cpp',
	'core/src/cpu/mmx.cpp',
	'core/src/cpu/core_normal_8086.cpp',
	'core/src/cpu/cpu.cpp',
	'core/src/cpu/core_normal.cpp',
	'core/src/cpu/core_prefetch_286.cpp',
	'core/src/cpu/core_simple.cpp',
	'core/src/cpu/callback.cpp',
	'core/src/cpu/paging.cpp',
	'core/src/cpu/core_dyn_x86.cpp',
	'core/src/cpu/core_dynrec.cpp',
	'core/src/cpu/modrm.cpp',
	'core/src/cpu/core_normal_286.cpp',
	'core/src/cpu/core_prefetch.cpp',
	'core/src/cpu/flags.cpp',
	'core/src/cpu/core_prefetch_8086.cpp',
	'core/src/misc/regionalloctracking.cpp',
	'core/src/misc/setup.cpp',
	'core/src/misc/mkdir_p.cpp',
	'core/src/misc/ethernet_nothing.cpp',
	'core/src/misc/clipboard.cpp',
	'core/src/misc/ethernet_slirp.cpp',
	'core/src/misc/iconvpp.cpp',
	'core/src/misc/shiftjis.cpp',
	'core/src/misc/ethernet_pcap.cpp',
	'core/src/misc/savestates.cpp',
	'core/src/misc/ethernet.cpp',
	'core/src/misc/programs.cpp',
	'core/src/misc/cross.cpp',
	'core/src/misc/support.cpp',
	'core/src/misc/messages.cpp',
	'core/src/gui/sdl_gui.cpp',
	'core/src/gui/render.cpp',
	'core/src/gui/render_scalers.cpp',
	'core/src/gui/sdl_mapper.cpp',
	'core/src/gui/zipfile.cpp',
	'core/src/gui/sdlmain.cpp',
	'core/src/gui/ptrop.cpp',
	'core/src/gui/sdlmain_linux.cpp',
	'core/src/gui/menu.cpp',
	'core/src/gui/midi.cpp',
	'core/src/gui/bitop.cpp',
	'core/src/gui/menu_callback.cpp',
	'core/src/gui/display2.cpp',
	'core/src/ints/int10_modes.cpp',
	'core/src/ints/bios.cpp',
	'core/src/ints/int10.cpp',
	'core/src/ints/bios_memdisk.cpp',
	'core/src/ints/int10_vesa.cpp',
	'core/src/ints/int_dosv.cpp',
	'core/src/ints/int10_vptable.cpp',
	'core/src/ints/int10_misc.cpp',
	'core/src/ints/xms.cpp',
	'core/src/ints/bios_disk.cpp',
	'core/src/ints/qcow2_disk.cpp',
	'core/src/ints/pc98_lio.cpp',
	'core/src/ints/int10_memory.cpp',
	'core/src/ints/mouse.cpp',
	'core/src/ints/bios_keyboard.cpp',
	'core/src/ints/ems.cpp',
	'core/src/ints/bios_vhd.cpp',
	'core/src/ints/int10_put_pixel.cpp',
	'core/src/ints/int10_video_state.cpp',
	'core/src/ints/int10_char.cpp',
	'core/src/ints/int10_pal.cpp',
	'core/src/aviwriter/riff_wav_writer.cpp',
	'core/src/aviwriter/avi_rw_iobuf.cpp',
	'core/src/aviwriter/riff.cpp',
	'core/src/aviwriter/ksdataformat.cpp',
	'core/src/aviwriter/avi_writer.cpp',
	'core/src/aviwriter/guid.cpp',
	'core/src/builtin/move_exe.cpp',
	'core/src/builtin/hexmem16_exe.cpp',
	'core/src/builtin/fdisk_exe.cpp',
	'core/src/builtin/textutil.cpp',
	'core/src/builtin/append_exe.cpp',
	'core/src/builtin/format_exe.cpp',
	'core/src/builtin/glide2x.cpp',
	'core/src/builtin/50_com.cpp',
	'core/src/builtin/debug_exe.cpp',
	'core/src/builtin/edit_com.cpp',
	'core/src/builtin/ne2000bin.cpp',
	'core/src/builtin/28_com.cpp',
	'core/src/builtin/find_exe.cpp',
	'core/src/builtin/sys_com.cpp',
	'core/src/builtin/eval.cpp',
	'core/src/builtin/dosmid.cpp',
	'core/src/builtin/dsxmenu_exe_pc98.cpp',
	'core/src/builtin/diskcopy_exe.cpp',
	'core/src/builtin/hexmem32_exe.cpp',
	'core/src/builtin/zip.cpp',
	'core/src/builtin/fcbs_com.cpp',
	'core/src/builtin/cwsdpmi_exe.cpp',
	'core/src/builtin/xcopy_exe.cpp',
	'core/src/builtin/4dos.cpp',
	'core/src/builtin/fc_exe.cpp',
	'core/src/builtin/files_com.cpp',
	'core/src/builtin/dos4gw_exe.cpp',
	'core/src/builtin/emsmagic.cpp',
	'core/src/builtin/chkdsk_exe.cpp',
	'core/src/builtin/defrag_exe.cpp',
	'core/src/builtin/print_com.cpp',
	'core/src/builtin/mem_com.cpp',
	'core/src/builtin/cwsdpmi_exe_pc98.cpp',
	'core/src/builtin/cdplay.cpp',
	'core/src/builtin/buffers_com.cpp',
	'core/src/builtin/sort_exe.cpp',
	'core/src/builtin/lastdriv_com.cpp',
	'core/src/builtin/dsxmenu_exe_pc.cpp',
	'core/src/builtin/replace_exe.cpp',
	'core/src/builtin/dos32a_exe.cpp',
	'core/src/builtin/dosidle_exe.cpp',
	'core/src/builtin/25_com.cpp',
	'core/src/builtin/device_com.cpp',
	'core/src/builtin/shutdown.cpp',
	'core/src/builtin/mpxplay.cpp',
	'core/src/tool/mach-o-matic.cpp',
	'core/src/shell/shell.cpp',
	'core/src/shell/shell_batch.cpp',
	'core/src/shell/shell_cmds.cpp',
	'core/src/shell/shell_misc.cpp',
	'core/src/hardware/ps1_sound.cpp',
	'core/src/hardware/vga_pc98_dac.cpp',
	'core/src/hardware/vga_tseng.cpp',
	'core/src/hardware/vga_pc98_crtc.cpp',
	'core/src/hardware/vga_pc98_gdc_draw.cpp',
	'core/src/hardware/vga_draw.cpp',
	'core/src/hardware/gameblaster.cpp',
	'core/src/hardware/pic.cpp',
	'core/src/hardware/memory.cpp',
	'core/src/hardware/cmos.cpp',
	'core/src/hardware/voodoo_opengl.cpp',
	'core/src/hardware/parport/printer_charmaps.cpp',
	'core/src/hardware/parport/directlpt.cpp',
	'core/src/hardware/parport/parport.cpp',
	'core/src/hardware/parport/printer_redir.cpp',
	'core/src/hardware/parport/printer.cpp',
	'core/src/hardware/parport/filelpt.cpp',
	'core/src/hardware/vga_dac.cpp',
	'core/src/hardware/vga_gfx.cpp',
	'core/src/hardware/vga_crtc.cpp',
	'core/src/hardware/serialport/softmodem.cpp',
	'core/src/hardware/serialport/misc_util.cpp',
	'core/src/hardware/serialport/serialdummy.cpp',
	'core/src/hardware/serialport/seriallog.cpp',
	'core/src/hardware/serialport/serialport.cpp',
	'core/src/hardware/serialport/directserial.cpp',
	'core/src/hardware/serialport/serialfile.cpp',
	'core/src/hardware/serialport/libserial.cpp',
	'core/src/hardware/serialport/serialmouse.cpp',
	'core/src/hardware/serialport/nullmodem.cpp',
	'core/src/hardware/pci_bus.cpp',
	'core/src/hardware/vga_s3.cpp',
	'core/src/hardware/hardopl.cpp',
	'core/src/hardware/glide.cpp',
	'core/src/hardware/mpu401.cpp',
	'core/src/hardware/RetroWaveLib/RetroWave_DOSBoX.cpp',
	'core/src/hardware/dbopl.cpp',
	'core/src/hardware/tandy_sound.cpp',
	'core/src/hardware/keyboard.cpp',
	'core/src/hardware/vga_pc98_gdc.cpp',
	'core/src/hardware/gus.cpp',
	'core/src/hardware/voodoo_emu.cpp',
	'core/src/hardware/pcspeaker.cpp',
	'core/src/hardware/innova.cpp',
	'core/src/hardware/floppy.cpp',
	'core/src/hardware/vga_memory.cpp',
	'core/src/hardware/timer.cpp',
	'core/src/hardware/pc98.cpp',
	'core/src/hardware/vga_paradise.cpp',
	'core/src/hardware/opl3duoboard/opl3duoboard.cpp',
	'core/src/hardware/opl2board/opl2board.cpp',
	'core/src/hardware/mame/ymf262.cpp',
	'core/src/hardware/mame/sn76496.cpp',
	'core/src/hardware/mame/ymdeltat.cpp',
	'core/src/hardware/mame/fmopl.cpp',
	'core/src/hardware/mame/saa1099.cpp',
	'core/src/hardware/disney.cpp',
	'core/src/hardware/vga_attr.cpp',
	'core/src/hardware/ide.cpp',
	'core/src/hardware/8255.cpp',
	'core/src/hardware/vga_misc.cpp',
	'core/src/hardware/voodoo_vogl.cpp',
	'core/src/hardware/dongle.cpp',
	'core/src/hardware/vga_seq.cpp',
	'core/src/hardware/ipx.cpp',
	'core/src/hardware/vga_ati.cpp',
	'core/src/hardware/adlib.cpp',
	'core/src/hardware/nukedopl.cpp',
	'core/src/hardware/vga_pc98_cg.cpp',
	'core/src/hardware/iohandler.cpp',
	'core/src/hardware/hardware.cpp',
	'core/src/hardware/ne2000.cpp',
	'core/src/hardware/imfc.cpp',
	'core/src/hardware/ipxserver.cpp',
	'core/src/hardware/pc98_artic.cpp',
	'core/src/hardware/vga_other.cpp',
	'core/src/hardware/pc98_fm.cpp',
	'core/src/hardware/vga_xga.cpp',
	'core/src/hardware/vga.cpp',
	'core/src/hardware/dma.cpp',
	'core/src/hardware/opl.cpp',
	'core/src/hardware/voodoo_interface.cpp',
	'core/src/hardware/reSID/pot.cpp',
	'core/src/hardware/reSID/wave6581_PS_.cpp',
	'core/src/hardware/reSID/voice.cpp',
	'core/src/hardware/reSID/wave8580_P_T.cpp',
	'core/src/hardware/reSID/wave8580_PST.cpp',
	'core/src/hardware/reSID/filter.cpp',
	'core/src/hardware/reSID/wave6581__ST.cpp',
	'core/src/hardware/reSID/wave.cpp',
	'core/src/hardware/reSID/version.cpp',
	'core/src/hardware/reSID/extfilt.cpp',
	'core/src/hardware/reSID/wave8580_PS_.cpp',
	'core/src/hardware/reSID/sid.cpp',
	'core/src/hardware/reSID/envelope.cpp',
	'core/src/hardware/reSID/wave6581_PST.cpp',
	'core/src/hardware/reSID/wave6581_P_T.cpp',
	'core/src/hardware/reSID/wave8580__ST.cpp',
	'core/src/hardware/joystick.cpp',
	'core/src/hardware/mixer.cpp',
	'core/src/hardware/voodoo.cpp',
	'core/src/hardware/sblaster.cpp',
	'core/src/hardware/vga_pc98_egc.cpp',
	'core/src/libs/passthroughio/passthroughio.cpp',
	'core/src/libs/decoders/mp3_seek_table.cpp',
	'core/src/libs/decoders/mp3.cpp',
	'core/src/libs/gui_tk/gui_tk.cpp',
	'core/src/libs/physfs/physfs_platform_winrt.cpp',
	'core/src/libs/physfs/physfs_platform_haiku.cpp',
	'core/src/libs/zmbv/zmbv.cpp',
	'core/src/libs/mt32/LA32FloatWaveGenerator.cpp',
	'core/src/libs/mt32/MidiStreamParser.cpp',
	'core/src/libs/mt32/Synth.cpp',
	'core/src/libs/mt32/ROMInfo.cpp',
	'core/src/libs/mt32/VersionTagging.cpp',
	'core/src/libs/mt32/LA32WaveGenerator.cpp',
	'core/src/libs/mt32/LA32Ramp.cpp',
	'core/src/libs/mt32/BReverbModel.cpp',
	'core/src/libs/mt32/Poly.cpp',
	'core/src/libs/mt32/File.cpp',
	'core/src/libs/mt32/SampleRateConverter.cpp',
	'core/src/libs/mt32/Part.cpp',
	'core/src/libs/mt32/Display.cpp',
	'core/src/libs/mt32/srchelper/SoxrAdapter.cpp',
	'core/src/libs/mt32/srchelper/srctools/src/SincResampler.cpp',
	'core/src/libs/mt32/srchelper/srctools/src/LinearResampler.cpp',
	'core/src/libs/mt32/srchelper/srctools/src/FIRResampler.cpp',
	'core/src/libs/mt32/srchelper/srctools/src/IIR2xResampler.cpp',
	'core/src/libs/mt32/srchelper/srctools/src/ResamplerModel.cpp',
	'core/src/libs/mt32/srchelper/SamplerateAdapter.cpp',
	'core/src/libs/mt32/srchelper/InternalResampler.cpp',
	'core/src/libs/mt32/FileStream.cpp',
	'core/src/libs/mt32/TVA.cpp',
	'core/src/libs/mt32/TVP.cpp',
	'core/src/libs/mt32/Partial.cpp',
	'core/src/libs/mt32/c_interface/c_interface.cpp',
	'core/src/libs/mt32/PartialManager.cpp',
	'core/src/libs/mt32/Tables.cpp',
	'core/src/libs/mt32/TVF.cpp',
	'core/src/libs/mt32/Analog.cpp',
	'core/src/libs/mt32/sha1/sha1.cpp',
	'core/src/libs/xBRZ/xbrz.cpp',
	'core/src/gamelink/gamelink_term.cpp',
	'core/src/gamelink/gamelink.cpp',
	'core/src/output/output_direct3d.cpp',
	'core/src/output/direct3d/ScalingEffect.cpp',
	'core/src/output/direct3d/direct3d.cpp',
	'core/src/output/direct3d/hq2x_d3d.cpp',
	'core/src/output/output_tools_xbrz.cpp',
	'core/src/output/output_opengl.cpp',
	'core/src/output/output_surface.cpp',
	'core/src/output/output_ttf.cpp',
	'core/src/output/output_gamelink.cpp',
	'core/src/output/output_tools.cpp',
	'core/src/fpu/fpu.cpp',
	'core/src/misc/winiconv.c',
	'core/src/gui/sdl_ttf.c',
	'core/src/gui/zipcrc.c',
	'core/src/gui/whereami.c',
	'core/src/builtin/xcopy/kitten.c',
	'core/src/builtin/xcopy/xcopy.c',
	'core/src/builtin/xcopy/prf.c',
	'core/src/hardware/RetroWaveLib/Protocol/Serial.c',
	'core/src/hardware/RetroWaveLib/Board/MiniBlaster.c',
	'core/src/hardware/RetroWaveLib/Board/MasterGear.c',
	'core/src/hardware/RetroWaveLib/Board/OPL3.c',
	'core/src/hardware/RetroWaveLib/RetroWave.c',
	'core/src/hardware/RetroWaveLib/Platform/Win32_SerialPort.c',
	'core/src/hardware/RetroWaveLib/Platform/Linux_SPI.c',
	'core/src/hardware/RetroWaveLib/Platform/POSIX_SerialPort.c',
	'core/src/hardware/RetroWaveLib/Platform/STM32_HAL_SPI.c',
	'core/src/hardware/esfmu/esfm_registers.c',
	'core/src/hardware/esfmu/esfm.c',
	'core/src/hardware/imfc_rom.c',
	'core/src/hardware/snd_pc98/common/parts.c',
	'core/src/hardware/snd_pc98/sound/rhythmc.c',
	'core/src/hardware/snd_pc98/sound/fmtimer.c',
	'core/src/hardware/snd_pc98/sound/getsnd/getwave.c',
	'core/src/hardware/snd_pc98/sound/getsnd/getsmix.c',
	'core/src/hardware/snd_pc98/sound/getsnd/getsnd.c',
	'core/src/hardware/snd_pc98/sound/sound.c',
	'core/src/hardware/snd_pc98/sound/adpcmc.c',
	'core/src/hardware/snd_pc98/sound/soundrom.c',
	'core/src/hardware/snd_pc98/sound/opngeng.c',
	'core/src/hardware/snd_pc98/sound/sndcsec.c',
	'core/src/hardware/snd_pc98/sound/s98.c',
	'core/src/hardware/snd_pc98/sound/adpcmg.c',
	'core/src/hardware/snd_pc98/sound/pcm86c.c',
	'core/src/hardware/snd_pc98/sound/opngenc.c',
	'core/src/hardware/snd_pc98/sound/psggeng.c',
	'core/src/hardware/snd_pc98/sound/tms3631c.c',
	'core/src/hardware/snd_pc98/sound/psggenc.c',
	'core/src/hardware/snd_pc98/sound/tms3631g.c',
	'core/src/hardware/snd_pc98/sound/fmboard.c',
	'core/src/hardware/snd_pc98/sound/pcm86g.c',
	'core/src/hardware/snd_pc98/cbus/board14.c',
	'core/src/hardware/snd_pc98/cbus/boardx2.c',
	'core/src/hardware/snd_pc98/cbus/board86.c',
	'core/src/hardware/snd_pc98/cbus/pc9861k.c',
	'core/src/hardware/snd_pc98/cbus/board118.c',
	'core/src/hardware/snd_pc98/cbus/boardspb.c',
	'core/src/hardware/snd_pc98/cbus/cbuscore.c',
	'core/src/hardware/snd_pc98/cbus/cs4231io.c',
	'core/src/hardware/snd_pc98/cbus/amd98.c',
	'core/src/hardware/snd_pc98/cbus/pcm86io.c',
	'core/src/hardware/snd_pc98/cbus/board26k.c',
	'core/src/hardware/snd_pc98/cbus/boardpx.c',
	'core/src/hardware/snd_pc98/generic/keydisp.c',
	'core/src/hardware/snd_pc98/x11/dosio.c',
	'core/src/libs/decoders/internal/speexdsp/kiss_fftr.c',
	'core/src/libs/decoders/internal/speexdsp/scal.c',
	'core/src/libs/decoders/internal/speexdsp/kiss_fft_speex.c',
	'core/src/libs/decoders/internal/speexdsp/preprocess.c',
	'core/src/libs/decoders/internal/speexdsp/resample.c',
	'core/src/libs/decoders/internal/speexdsp/buffer.c',
	'core/src/libs/decoders/internal/speexdsp/fftwrap.c',
	'core/src/libs/decoders/internal/speexdsp/jitter.c',
	'core/src/libs/decoders/internal/speexdsp/mdf.c',
	'core/src/libs/decoders/internal/speexdsp/smallft.c',
	'core/src/libs/decoders/internal/speexdsp/filterbank.c',
	'core/src/libs/decoders/internal/opusfile/wincerts.c',
	'core/src/libs/decoders/internal/opusfile/opusfile.c',
	'core/src/libs/decoders/internal/opusfile/stream.c',
	'core/src/libs/decoders/internal/opusfile/http.c',
	'core/src/libs/decoders/internal/opusfile/internal.c',
	'core/src/libs/decoders/internal/opusfile/info.c',
	'core/src/libs/decoders/internal/ogg/framing.c',
	'core/src/libs/decoders/internal/ogg/bitwise.c',
	'core/src/libs/decoders/internal/opus/src/mapping_matrix.c',
	'core/src/libs/decoders/internal/opus/src/mlp_data.c',
	'core/src/libs/decoders/internal/opus/src/repacketizer.c',
	'core/src/libs/decoders/internal/opus/src/opus_multistream_encoder.c',
	'core/src/libs/decoders/internal/opus/src/opus_compare.c',
	'core/src/libs/decoders/internal/opus/src/opus_projection_encoder.c',
	'core/src/libs/decoders/internal/opus/src/opus_projection_decoder.c',
	'core/src/libs/decoders/internal/opus/src/opus_decoder.c',
	'core/src/libs/decoders/internal/opus/src/opus_multistream_decoder.c',
	'core/src/libs/decoders/internal/opus/src/opussrc.c',
	'core/src/libs/decoders/internal/opus/src/opus_multistream.c',
	'core/src/libs/decoders/internal/opus/src/analysis.c',
	'core/src/libs/decoders/internal/opus/src/mlp.c',
	'core/src/libs/decoders/internal/opus/src/opus_encoder.c',
	'core/src/libs/decoders/internal/opus/celt/celt_decoder.c',
	'core/src/libs/decoders/internal/opus/celt/kiss_fft.c',
	'core/src/libs/decoders/internal/opus/celt/laplace.c',
	'core/src/libs/decoders/internal/opus/celt/pitch.c',
	'core/src/libs/decoders/internal/opus/celt/celt_lpc.c',
	'core/src/libs/decoders/internal/opus/celt/modes.c',
	'core/src/libs/decoders/internal/opus/celt/entenc.c',
	'core/src/libs/decoders/internal/opus/celt/celt.c',
	'core/src/libs/decoders/internal/opus/celt/mathops.c',
	'core/src/libs/decoders/internal/opus/celt/mdct.c',
	'core/src/libs/decoders/internal/opus/celt/celt_encoder.c',
	'core/src/libs/decoders/internal/opus/celt/rate.c',
	'core/src/libs/decoders/internal/opus/celt/quant_bands.c',
	'core/src/libs/decoders/internal/opus/celt/bands.c',
	'core/src/libs/decoders/internal/opus/celt/vq.c',
	'core/src/libs/decoders/internal/opus/celt/cwrs.c',
	'core/src/libs/decoders/internal/opus/celt/entcode.c',
	'core/src/libs/decoders/internal/opus/celt/arm/pitch_neon_intr.c',
	'core/src/libs/decoders/internal/opus/celt/arm/armcpu.c',
	'core/src/libs/decoders/internal/opus/celt/arm/celt_neon_intr.c',
	'core/src/libs/decoders/internal/opus/celt/arm/arm_celt_map.c',
	'core/src/libs/decoders/internal/opus/celt/arm/celt_fft_ne10.c',
	'core/src/libs/decoders/internal/opus/celt/arm/celt_mdct_ne10.c',
	'core/src/libs/decoders/internal/opus/celt/x86/pitch_sse.c',
	'core/src/libs/decoders/internal/opus/celt/x86/pitch_sse4_1.c',
	'core/src/libs/decoders/internal/opus/celt/x86/pitch_sse2.c',
	'core/src/libs/decoders/internal/opus/celt/x86/x86cpu.c',
	'core/src/libs/decoders/internal/opus/celt/x86/vq_sse2.c',
	'core/src/libs/decoders/internal/opus/celt/x86/x86_celt_map.c',
	'core/src/libs/decoders/internal/opus/celt/x86/celt_lpc_sse4_1.c',
	'core/src/libs/decoders/internal/opus/celt/entdec.c',
	'core/src/libs/decoders/internal/opus/silk/biquad_alt.c',
	'core/src/libs/decoders/internal/opus/silk/NLSF_unpack.c',
	'core/src/libs/decoders/internal/opus/silk/sum_sqr_shift.c',
	'core/src/libs/decoders/internal/opus/silk/decode_parameters.c',
	'core/src/libs/decoders/internal/opus/silk/shell_coder.c',
	'core/src/libs/decoders/internal/opus/silk/stereo_quant_pred.c',
	'core/src/libs/decoders/internal/opus/silk/decode_indices.c',
	'core/src/libs/decoders/internal/opus/silk/process_NLSFs.c',
	'core/src/libs/decoders/internal/opus/silk/quant_LTP_gains.c',
	'core/src/libs/decoders/internal/opus/silk/init_decoder.c',
	'core/src/libs/decoders/internal/opus/silk/LP_variable_cutoff.c',
	'core/src/libs/decoders/internal/opus/silk/dec_API.c',
	'core/src/libs/decoders/internal/opus/silk/decode_frame.c',
	'core/src/libs/decoders/internal/opus/silk/tables_LTP.c',
	'core/src/libs/decoders/internal/opus/silk/interpolate.c',
	'core/src/libs/decoders/internal/opus/silk/PLC.c',
	'core/src/libs/decoders/internal/opus/silk/stereo_decode_pred.c',
	'core/src/libs/decoders/internal/opus/silk/control_SNR.c',
	'core/src/libs/decoders/internal/opus/silk/NSQ.c',
	'core/src/libs/decoders/internal/opus/silk/check_control_input.c',
	'core/src/libs/decoders/internal/opus/silk/resampler_down2_3.c',
	'core/src/libs/decoders/internal/opus/silk/tables_NLSF_CB_WB.c',
	'core/src/libs/decoders/internal/opus/silk/stereo_find_predictor.c',
	'core/src/libs/decoders/internal/opus/silk/log2lin.c',
	'core/src/libs/decoders/internal/opus/silk/resampler_private_IIR_FIR.c',
	'core/src/libs/decoders/internal/opus/silk/gain_quant.c',
	'core/src/libs/decoders/internal/opus/silk/HP_variable_cutoff.c',
	'core/src/libs/decoders/internal/opus/silk/float/regularize_correlations_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/find_LPC_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/LPC_inv_pred_gain_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/noise_shape_analysis_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/apply_sine_window_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/k2a_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/wrappers_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/energy_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/schur_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/scale_copy_vector_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/burg_modified_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/find_pitch_lags_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/inner_product_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/LTP_analysis_filter_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/find_pred_coefs_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/find_LTP_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/scale_vector_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/bwexpander_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/encode_frame_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/residual_energy_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/process_gains_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/warped_autocorrelation_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/corrMatrix_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/LTP_scale_ctrl_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/sort_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/pitch_analysis_core_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/LPC_analysis_filter_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/float/autocorrelation_FLP.c',
	'core/src/libs/decoders/internal/opus/silk/resampler.c',
	'core/src/libs/decoders/internal/opus/silk/bwexpander.c',
	'core/src/libs/decoders/internal/opus/silk/resampler_private_up2_HQ.c',
	'core/src/libs/decoders/internal/opus/silk/NSQ_del_dec.c',
	'core/src/libs/decoders/internal/opus/silk/tables_NLSF_CB_NB_MB.c',
	'core/src/libs/decoders/internal/opus/silk/code_signs.c',
	'core/src/libs/decoders/internal/opus/silk/table_LSF_cos.c',
	'core/src/libs/decoders/internal/opus/silk/tables_gain.c',
	'core/src/libs/decoders/internal/opus/silk/NLSF_decode.c',
	'core/src/libs/decoders/internal/opus/silk/encode_indices.c',
	'core/src/libs/decoders/internal/opus/silk/resampler_private_down_FIR.c',
	'core/src/libs/decoders/internal/opus/silk/bwexpander_32.c',
	'core/src/libs/decoders/internal/opus/silk/init_encoder.c',
	'core/src/libs/decoders/internal/opus/silk/tables_pulses_per_block.c',
	'core/src/libs/decoders/internal/opus/silk/encode_pulses.c',
	'core/src/libs/decoders/internal/opus/silk/lin2log.c',
	'core/src/libs/decoders/internal/opus/silk/sort.c',
	'core/src/libs/decoders/internal/opus/silk/decoder_set_fs.c',
	'core/src/libs/decoders/internal/opus/silk/decode_core.c',
	'core/src/libs/decoders/internal/opus/silk/VAD.c',
	'core/src/libs/decoders/internal/opus/silk/NLSF_stabilize.c',
	'core/src/libs/decoders/internal/opus/silk/A2NLSF.c',
	'core/src/libs/decoders/internal/opus/silk/stereo_encode_pred.c',
	'core/src/libs/decoders/internal/opus/silk/LPC_inv_pred_gain.c',
	'core/src/libs/decoders/internal/opus/silk/decode_pulses.c',
	'core/src/libs/decoders/internal/opus/silk/CNG.c',
	'core/src/libs/decoders/internal/opus/silk/resampler_down2.c',
	'core/src/libs/decoders/internal/opus/silk/sigm_Q15.c',
	'core/src/libs/decoders/internal/opus/silk/NLSF_VQ_weights_laroia.c',
	'core/src/libs/decoders/internal/opus/silk/tables_other.c',
	'core/src/libs/decoders/internal/opus/silk/stereo_MS_to_LR.c',
	'core/src/libs/decoders/internal/opus/silk/decode_pitch.c',
	'core/src/libs/decoders/internal/opus/silk/NLSF2A.c',
	'core/src/libs/decoders/internal/opus/silk/ana_filt_bank_1.c',
	'core/src/libs/decoders/internal/opus/silk/debug_silk.c',
	'core/src/libs/decoders/internal/opus/silk/control_audio_bandwidth.c',
	'core/src/libs/decoders/internal/opus/silk/inner_prod_aligned.c',
	'core/src/libs/decoders/internal/opus/silk/LPC_fit.c',
	'core/src/libs/decoders/internal/opus/silk/pitch_est_tables.c',
	'core/src/libs/decoders/internal/opus/silk/resampler_private_AR2.c',
	'core/src/libs/decoders/internal/opus/silk/stereo_LR_to_MS.c',
	'core/src/libs/decoders/internal/opus/silk/tables_pitch_lag.c',
	'core/src/libs/decoders/internal/opus/silk/VQ_WMat_EC.c',
	'core/src/libs/decoders/internal/opus/silk/LPC_analysis_filter.c',
	'core/src/libs/decoders/internal/opus/silk/NLSF_encode.c',
	'core/src/libs/decoders/internal/opus/silk/enc_API.c',
	'core/src/libs/decoders/internal/opus/silk/NLSF_del_dec_quant.c',
	'core/src/libs/decoders/internal/opus/silk/NLSF_VQ.c',
	'core/src/libs/decoders/internal/opus/silk/control_codec.c',
	'core/src/libs/decoders/internal/opus/silk/resampler_rom.c',
	'core/src/libs/decoders/audio_convert.c',
	'core/src/libs/decoders/flac.c',
	'core/src/libs/decoders/opus.c',
	'core/src/libs/decoders/vorbis.c',
	'core/src/libs/decoders/SDL_sound.c',
	'core/src/libs/decoders/wav.c',
	'core/src/libs/libchdr/libchdr_huffman.c',
	'core/src/libs/libchdr/zstd/common/pool.c',
	'core/src/libs/libchdr/zstd/common/error_private.c',
	'core/src/libs/libchdr/zstd/common/entropy_common.c',
	'core/src/libs/libchdr/zstd/common/zstd_common.c',
	'core/src/libs/libchdr/zstd/common/debug.c',
	'core/src/libs/libchdr/zstd/common/fse_decompress.c',
	'core/src/libs/libchdr/zstd/common/xxhash.c',
	'core/src/libs/libchdr/zstd/common/threading.c',
	'core/src/libs/libchdr/zstd/compress/zstd_opt.c',
	'core/src/libs/libchdr/zstd/compress/zstd_compress_superblock.c',
	'core/src/libs/libchdr/zstd/compress/zstd_lazy.c',
	'core/src/libs/libchdr/zstd/compress/zstd_ldm.c',
	'core/src/libs/libchdr/zstd/compress/zstd_compress_sequences.c',
	'core/src/libs/libchdr/zstd/compress/zstd_fast.c',
	'core/src/libs/libchdr/zstd/compress/hist.c',
	'core/src/libs/libchdr/zstd/compress/zstd_double_fast.c',
	'core/src/libs/libchdr/zstd/compress/zstd_compress_literals.c',
	'core/src/libs/libchdr/zstd/compress/fse_compress.c',
	'core/src/libs/libchdr/zstd/compress/huf_compress.c',
	'core/src/libs/libchdr/zstd/compress/zstd_compress.c',
	'core/src/libs/libchdr/zstd/compress/zstdmt_compress.c',
	'core/src/libs/libchdr/zstd/deprecated/zbuff_decompress.c',
	'core/src/libs/libchdr/zstd/deprecated/zbuff_compress.c',
	'core/src/libs/libchdr/zstd/deprecated/zbuff_common.c',
	'core/src/libs/libchdr/zstd/decompress/huf_decompress.c',
	'core/src/libs/libchdr/zstd/decompress/zstd_ddict.c',
	'core/src/libs/libchdr/zstd/decompress/zstd_decompress.c',
	'core/src/libs/libchdr/zstd/decompress/zstd_decompress_block.c',
	'core/src/libs/libchdr/zstd/dictBuilder/cover.c',
	'core/src/libs/libchdr/zstd/dictBuilder/divsufsort.c',
	'core/src/libs/libchdr/zstd/dictBuilder/fastcover.c',
	'core/src/libs/libchdr/zstd/dictBuilder/zdict.c',
	'core/src/libs/libchdr/zstd/legacy/zstd_v06.c',
	'core/src/libs/libchdr/zstd/legacy/zstd_v05.c',
	'core/src/libs/libchdr/zstd/legacy/zstd_v01.c',
	'core/src/libs/libchdr/zstd/legacy/zstd_v02.c',
	'core/src/libs/libchdr/zstd/legacy/zstd_v07.c',
	'core/src/libs/libchdr/zstd/legacy/zstd_v04.c',
	'core/src/libs/libchdr/zstd/legacy/zstd_v03.c',
	'core/src/libs/libchdr/libchdr_chd.c',
	'core/src/libs/libchdr/libchdr_bitstream.c',
	'core/src/libs/libchdr/lzma/Alloc.c',
	'core/src/libs/libchdr/lzma/Delta.c',
	'core/src/libs/libchdr/lzma/Lzma86Dec.c',
	'core/src/libs/libchdr/lzma/Bra86.c',
	'core/src/libs/libchdr/lzma/BraIA64.c',
	'core/src/libs/libchdr/lzma/LzFind.c',
	'core/src/libs/libchdr/lzma/Sort.c',
	'core/src/libs/libchdr/lzma/LzmaEnc.c',
	'core/src/libs/libchdr/lzma/LzmaDec.c',
	'core/src/libs/libchdr/lzma/CpuArch.c',
	'core/src/libs/libchdr/lzma/Bra.c',
	'core/src/libs/libchdr/libchdr_flac.c',
	'core/src/libs/libchdr/libchdr_cdrom.c',
	'core/src/libs/physfs/physfs_archiver_grp.c',
	'core/src/libs/physfs/physfs_platform_posix.c',
	'core/src/libs/physfs/physfs_platform_qnx.c',
	'core/src/libs/physfs/physfs_archiver_slb.c',
	'core/src/libs/physfs/physfs_unicode.c',
	'core/src/libs/physfs/physfs_archiver_7z.c',
	'core/src/libs/physfs/physfs_archiver_vdf.c',
	'core/src/libs/physfs/physfs_archiver_hog.c',
	'core/src/libs/physfs/physfs_platform_windows.c',
	'core/src/libs/physfs/physfs_archiver_wad.c',
	'core/src/libs/physfs/physfs_archiver_qpak.c',
	'core/src/libs/physfs/physfs_platform_os2.c',
	'core/src/libs/physfs/physfs_byteorder.c',
	'core/src/libs/physfs/physfs_platform_unix.c',
	'core/src/libs/physfs/physfs_archiver_zip.c',
	'core/src/libs/physfs/physfs_archiver_iso9660.c',
	'core/src/libs/physfs/physfs_archiver_mvl.c',
	'core/src/libs/physfs/physfs_archiver_dir.c',
	'core/src/libs/physfs/physfs.c',
	'core/src/libs/physfs/physfs_archiver_unpacked.c',
	'core/src/libs/fluidsynth/fluid_mdriver.c',
	'core/src/libs/fluidsynth/fluid_rvoice.c',
	'core/src/libs/fluidsynth/fluid_conv.c',
	'core/src/libs/fluidsynth/fluid_aufile.c',
	'core/src/libs/fluidsynth/fluid_rvoice_event.c',
	'core/src/libs/fluidsynth/fluid_synth.c',
	'core/src/libs/fluidsynth/fluid_dll.c',
	'core/src/libs/fluidsynth/fluid_midi_router.c',
	'core/src/libs/fluidsynth/fluid_rvoice_dsp.c',
	'core/src/libs/fluidsynth/fluid_chorus.c',
	'core/src/libs/fluidsynth/fluid_mod.c',
	'core/src/libs/fluidsynth/fluid_iir_filter.c',
	'core/src/libs/fluidsynth/fluid_ringbuffer.c',
	'core/src/libs/fluidsynth/fluid_gen.c',
	'core/src/libs/fluidsynth/fluid_event.c',
	'core/src/libs/fluidsynth/fluid_list.c',
	'core/src/libs/fluidsynth/fluid_rvoice_mixer.c',
	'core/src/libs/fluidsynth/fluid_chan.c',
	'core/src/libs/fluidsynth/fluid_sys.c',
	'core/src/libs/fluidsynth/fluid_rev.c',
	'core/src/libs/fluidsynth/fluid_sdl2.c',
	'core/src/libs/fluidsynth/fluid_tuning.c',
	'core/src/libs/fluidsynth/fluid_ramsfont.c',
	'core/src/libs/fluidsynth/fluid_seqbind.c',
	'core/src/libs/fluidsynth/fluid_filerenderer.c',
	'core/src/libs/fluidsynth/fluid_defsfont.c',
	'core/src/libs/fluidsynth/fluid_lfo.c',
	'core/src/libs/fluidsynth/fluid_hash.c',
	'core/src/libs/fluidsynth/fluid_seq.c',
	'core/src/libs/fluidsynth/fluid_voice.c',
	'core/src/libs/fluidsynth/fluid_adriver.c',
	'core/src/libs/fluidsynth/fluid_dsound.c',
	'core/src/libs/fluidsynth/fluid_midi.c',
	'core/src/libs/fluidsynth/fluid_settings.c',
	'core/src/libs/fluidsynth/fluid_adsr_env.c',
	'core/src/libs/fluidsynth/fluid_cmd.c',
	'core/src/libs/tinyfiledialogs/tinyfiledialogs.c',
	'core/src/output/ppscale.c',
]

DOSBoxIncludeDirs = [
  '.',
  '..',
	'core',
	'core/include',
	'core/src',
]

DOSBoxCompileArgs = [
	'-DHAVE_CONFIG_H',
	'-Wfatal-errors',
	'-Wno-int-to-void-pointer-cast',
	'-Wno-address-of-packed-member',
	'-Wno-format-zero-length',
	'-Wno-missing-field-initializers',
	'-Wno-strict-aliasing',
	'-Wno-implicit-fallthrough',
	'-Wno-deprecated-declarations',
	'-Wnon-virtual-dtor',
	'-Wsuggest-override',
	'-Wconversion-null',
	'-Wsign-promo',
	'-Wlogical-op',
	'-Wno-error=incompatible-pointer-types',
	'-Wno-error=format-security',
	'-pedantic',
	'-Wunused',
	'-Wextra',
	'-Wall',
	'-D_REENTRANT',
	'-D_GNU_SOURCE=1',
	'-fvisibility=hidden',
	'-DXTHREADS',
	'-DHAVE_LINUX_VERSION_H',
	'-D_XOPEN_SOURCE=700',
	'-D_POSIX_C_SOURCE=200809L'
	]

# DOSBox dependency

 DOSBoxDependency = declare_dependency(
  compile_args        : [  DOSBoxCompileArgs  ],
		link_args        : [  ],
  include_directories : include_directories(DOSBoxIncludeDirs),
  sources             : [ DOSBoxSrc ],
  dependencies        : [ dependency('sdl2') ]
 )

# DOSBox Core Configuration

 baseDependency = declare_dependency(
  compile_args        : [ ],
  include_directories : [ include_directories( ['.', '..'] )],
  sources             : [ ],
  dependencies        : [ 
			                       DOSBoxDependency,
                        ]
 )
